# invoice_synchronizer

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  SIIGO_CONFIGURATION.json  SYSTEM_CONFIGURATION.JSON  cleaned.tsv  cleaned1.tsv  cleaned2.tsv  clients_error.json  configuration.JSON  default_user.json  mypy.ini  programa.py  prueba.py  pyproject.toml  test.py  test.txt  vendty.ipynb
invoice_synchronizer/: __init__.py  connector.py
invoice_synchronizer/application/: __init__.py
invoice_synchronizer/application/use_cases/: updater.py  utils.py
invoice_synchronizer/application/use_cases/updater/: dto.py  updater.py  utils.py
invoice_synchronizer/domain/: __init__.py
invoice_synchronizer/domain/errors/: errors.py
invoice_synchronizer/domain/models/: __init__.py  invoices.py  products.py  user.py  utils.py
invoice_synchronizer/domain/repositories/: platform_connector.py
invoice_synchronizer/domain/synchronization/: synchronization.py
invoice_synchronizer/infrastructure/: __init__.py  config.py
invoice_synchronizer/infrastructure/repositories/: __init__.py  connector.py  pirpos.py  siigo.py  utils.py
invoice_synchronizer/infrastructure/repositories/pirpos/: pirpos.py  utils.py
invoice_synchronizer/infrastructure/repositories/siigo/: siigo.py  utils.py
invoice_synchronizer/models/: __init__.py  invoices.py
invoice_synchronizer/presentation/lib/: synchronizer.py
invoice_synchronizer/repositories/: pirpos.py  utils.py
invoice_synchronizer/service/: __init__.py  updater.py
invoice_synchronizer/shared/: utils.py
invoice_synchronizer/utils/: __init__.py  errors.py  utils.py
pirpos2siigo/: __init__.py  connector.py
pirpos2siigo/clients/: __init__.py  pirpos.py  siigo.py  utils.py
pirpos2siigo/models/: __init__.py  clients.py  company.py  configuration_file.py  invoices.py  person.py  products.py  taxes.py  user.py
pirpos2siigo/repositories/: pirpos.py  siigo.py
pirpos2siigo/service/: __init__.py  updater.py  utils.py
pirpos2siigo/utils/: __init__.py  constants.py  errors.py  utils.py
tests/: test_pirpos2siigo.py
tests/clients/: test_utils.py
utils/: utils.py
