[tool.poetry]
name = "pirpos2siigo"
version = "0.1.0"
description = ""
authors = ["JulianEstebanHerrera <julianesteban.herrera@mercadolibre.com.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
requests = "^2.28.0"
Unidecode = "^1.3.4"
lxml = "^4.9.0"
openpyxl = "^3.0.10"
numpy = "^1.23.1"
mypy = "^0.971"
debugpy = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
implicit_reexport = true
strict_optional = true

[[tool.mypy.overrides]]
module = "newrelic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kpi_builder_lib.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "melitk.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google"
ignore_missing_imports = true

[tool.black]
line-length = 80

