[tool.poetry]
name = "invoice_synchronizer"
version = "1.0.0"
description = ""
authors = ["JulianEstebanHerrera <julianesteban.herrera@mercadolibre.com.co>"]
readme = "README.md"
packages = [{include = "invoice_synchronizer"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
Unidecode = "^1.3.4"
lxml = "^4.9.0"
openpyxl = "^3.0.10"
mypy = "^0.971"
debugpy = "^1.6.3"
pandas = "^1.5.2"
numpy = "^1.24.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
implicit_reexport = true
strict_optional = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
