[tool.poetry]
name = "invoice_synchronizer"
version = "1.0.0"
description = ""
authors = ["JulianEstebanHerrera <julianesteban.herrera@mercadolibre.com.co>"]
readme = "README.md"
packages = [{include = "invoice_synchronizer"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
requests = "^2.28.0"
Unidecode = "^1.3.4"
lxml = "^4.9.0"
openpyxl = "^3.0.10"
pandas = "^1.5.2"
numpy = "^1.24.1"
pydantic = "^2.12.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
debugpy = "^1.6.3"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
